applications/oauth2-proxy-alertmanager/middleware-alertmanager-oauth-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: metrics-alertmanager-oauth-redirect
  namespace: metrics
spec:
  forwardAuth:
    address: http://oauth2-proxy-alertmanager.metrics.svc.cluster.local:80
    authResponseHeaders:
    - X-Auth-Request-Access-Token
    - Authorization
    maxBodySize: 1048576
    maxResponseBodySize: 1048576
    trustForwardHeader: true
