applications/oauth2-proxy-alertmanager/httproute-alertmanager.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metrics-alertmanager
  namespace: metrics
spec:
  hostnames:
  - alertmanager.thegraveshouse.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: traefik-gateway
    namespace: traefik
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: alertmanager-oauth2-proxy
      namespace: metrics
      port: 9093
      weight: 1
    filters:
    - extensionRef:
        group: traefik.io
        kind: Middleware
        name: metrics-alertmanager-oauth-redirect
      type: ExtensionRef
    matches:
    - path:
        type: PathPrefix
        value: /
